--- a/src/main/webapp/templates/timezone.html
+++ b/src/main/webapp/templates/timezone.html
@@ -39,7 +39,7 @@
 		<p />
 
 		<div class="row-fluid">
-			<table class="table table-bordered">
+			<table class="table table-bordered" id="timezoneList">
 				<thead>
 					<tr>
 						<th>Bezeichnung</th>
