--- a/src/main/webapp/templates/vessel.html
+++ b/src/main/webapp/templates/vessel.html
@@ -7,7 +7,7 @@
 		<legend>Schiffstyp bearbeiten</legend>
 		<!-- /ko -->
 		<!-- ko ifnot: vesselId  -->
-		<legend>Neue Schiffstyp</legend>
+		<legend>Neuer Schiffstyp</legend>
 		<!-- /ko -->
 
 		<div class="row-fluid">
