translations in javascript

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -1,5 +1,3 @@
-<h1 id="welcome">Willkommen bei NUFOC!</h1>
+<h1 id="welcome" data-bind="text: ko.i18n('index:index.title')"></h1>
 
-<p>Hier k&ouml;nnnen Sie Sichtungen von Raumschiffen eintragen.
-	Sollten Schiffstypen fehlen, so k&ouml;nnen Sie diese selber
-	nachtragen.</p>
+<p data-bind="text: ko.i18n('index:index.body')"></p>
